dark mode fixes

--- a/scss/mobilebar.scss
+++ b/scss/mobilebar.scss
@@ -1,14 +1,10 @@
-.navigator-mobile {
-	.pagination-block {
-		.scroller-container {
-			border-right: 3px solid;
-			margin-right: 5.5px;
-			.scroller-thumb {
-				right: -6px;
-				padding-right: 15px;
-				margin-right: -15px;
-			}
-		}
+.navigator-mobile .pagination-block .scroller-container {
+	border-right: 3px solid;
+	margin-right: 5.5px;
+	.scroller-thumb {
+		right: -6px;
+		padding-right: 15px;
+		margin-right: -15px;
 	}
 }
 
@@ -18,7 +14,6 @@
 	}
 	.nav-text {
 		font-size: 1rem;
-		color: $body-color;
 	}
 	.nav-link {
 		padding: 8px;
