--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -1,20 +1,20 @@
 .skin-noskin {
 	// only using colors when there is no bootswatch skin applied
-	nav.sidebar, .bottombar-nav {
-		color: $secondary !important;
-		background-color: $light !important;
+	--nav-color: #{$secondary};
+	--nav-bg: #{$light};
+	[data-bs-theme="dark"] & {
+		--nav-color: #{$light};
+		--nav-bg: #{$dark};
 	}
-	.bottombar-nav {
-		.dropdown-menu {
-			color: $secondary !important;
-			background-color: $light !important;
-		}
+	nav.sidebar,
+	.bottombar-nav,
+	.bottombar-nav .dropdown-menu {
+		color: var(--nav-color) !important;
+		background-color: var(--nav-bg) !important;
 	}
 }
 
 .sidebar {
-	$hover-color: mix($light, $dark, 90%);
-
 	@include media-breakpoint-up(lg) {
 		&.open {
 			min-width: 200px;
@@ -52,11 +52,8 @@
 		padding: ($spacer * 0.25) ($spacer * 0.5);
 		border-radius: $border-radius-sm;
 		cursor: pointer;
-		&.active {
-			background-color: $hover-color;
-		}
-		&:hover {
-			background-color: $hover-color;
+		&.active, &:hover {
+			background-color: var(--btn-ghost-hover-color);
 		}
 	}
 
